name:           luthor
version:        0.0.0.0
license:        BSD3
license-file:   LICENSE
author:         Edward A. Kmett
maintainer:     Edward A. Kmett <ekmett@gmail.com>
stability:      experimental
homepage:       http://github.com/ekmett/luthor
category:       Development, Parsing
copyright:      (c) 2010 Edward A. Kmett,
                (c) 1995-2003 Chris Dornan and Simon Marlow
build-type:     Simple
cabal-version:  >=1.6
tested-with:    GHC==6.12.1
synopsis:       Fast quasiquoted unicode-enabled lexers
description:    Fast quasiquoted unicode-enabled lexers

source-repository head
  type:     git
  location: http://github.com/ekmett/luthor.git
  branch:   master

flag optimize
  description: Enable optimizations
  default:     True

library
    ghc-options: -Wall
    if flag(optimize)
      ghc-options: -funbox-strict-fields -O2 -fspec-constr -fdicts-cheap

    build-depends:
      base >= 4 && < 6,
      ghc-prim >= 0.2 && < 0.3,
      charset >= 0.1 && < 0.2,
      parsec >= 2.1.0.1 && < 3.2,
      containers >= 0.3.0 && < 0.4

    exposed-modules:
      Text.Luthor.Bifunctor
      Text.Luthor.Classifier
      Text.Luthor.DFA
      Text.Luthor.Graph
      Text.Luthor.Handler
      Text.Luthor.Info
      Text.Luthor.NFA
      Text.Luthor.Output
      Text.Luthor.Parser
      Text.Luthor.Pretty
      Text.Luthor.Silhouette
      Text.Luthor.Sort
      Text.Luthor.Syntax
      Text.Luthor.Trie
